Made the title more fun and cool #3

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>GitHub Demo!</title>
   </head>
   <body>
-    <h1>Demo</h1>
+    <h1>This is the exciting demo:</h1>
   </body>
 </html>
